# jensen-bucks

./: .gitignore  README.md  basic.ipynb
WinDirectStorage/: .gitignore  CMakeLists.txt  README.md  WinDirectStorage.cpp  WinDirectStorage.sln  WinDirectStorage.vcxproj  generate_test_file.cpp  optimized.cu  processor.cu
baselines/: README.md
baselines/gpu_cudf/: main.py
baselines/gpu_nvidia/: CMakeLists.txt  README.md  brc.cpp  brc_chunks.cpp  brc_pipeline.cpp  common.hpp  groupby_results.cpp  groupby_results.hpp
baselines/gpu_ref/: README.md  base.cpp  fast  fast.cu  fast_new  run.sh
gpu_ref/: base  fast.cu  run.sh
python/: main.py
src/: processor.cu
test/: README.md  test.bat
